testing/macro-tests/tests/ui/generated_requires_optional_timestamp.stderr
error: generated(insert = ...) currently supports only single-value fields
  --> tests/ui/generated_requires_optional_timestamp.rs:23:21
   |
23 |             ident = "created_on_insert",
   |                     ^^^^^^^^^^^^^^^^^^^
